--- a/data/ack.tex
+++ b/data/ack.tex
@@ -5,5 +5,7 @@
 
   同时衷心感谢徐国亮师兄，任杰师兄在流动稳定性方面的悉心指导，帮助我解决了不少问题。感谢朱辉师兄教我使用hpMusic计算程序。感谢徐胜金教授和他的学生王庆洋提供实验数据。
 
+  感谢我的父母和杨希同学对我生活上的照顾。
+  
   感谢 \LaTeX 和 \thuthesis\cite{thuthesis}，帮我节省了不少时间。
 \end{acknowledgement}
