--- a/data/chap03.tex
+++ b/data/chap03.tex
@@ -15,7 +15,7 @@
 \begin{figure}[htb]
   \centering
   % Requires \usepackage{graphicx}
-  \includegraphics[width=0.6\textwidth]{ch3/comparison_Malik.eps}\\
+  \includegraphics[width=0.6\textwidth]{ch3/comparison_Malik.jpg}\\
   \caption{计算得到的扰动能量与文献\cite{Malik1994}中的结果对比 ($Re_W=500$)}\label{f:Com_Malik1994}
 \end{figure}
 \begin{table}
