--- a/data/chap06.tex
+++ b/data/chap06.tex
@@ -1,5 +1,5 @@
 \chapter{结论与展望}
-本文将大型客机减阻问题分解抽象为三维边界层转捩推迟问题和充分发展槽道减阻问题。并采用介质阻挡放电等离子激发器作为控制手段，提出并分析了新的减阻控制方法。
+本文将大型客机减阻问题分解抽象为三维边界层转捩推迟问题和充分发展湍流槽道减阻问题。并采用介质阻挡放电等离子激发器作为控制手段，提出并分析了新的减阻控制方法。
 
 对于三维边界层转捩推迟问题，本文先研究了后掠Hiemenz流动这一基础模型流动。该流动是顺压梯度后掠平板的一种特殊情况。针对这种流动，本文提出了在每个展向周期放置一个DBD激发器的谐波激励控制方案。为了得到较优的控制参数，本文推导了基于伴随方程的敏感性分析公式。敏感性分析的结果指出，在低速条带下方，也就是横流涡下方偏下扫的位置处添加正方向的体积力可以抑制扰动的发展，后续的NPSE计算也验证了这一结果。本文同时测试了不同的激发器流向位置和激励电压，发现都是适中的情况控制效果较好。这表明所添加体积力的强度需要与当地所存在的扰动强度相当。太弱起不到控制的效果，太强会引入新的扰动主导失稳过程，反而会促进转捩。
 
