--- a/data/cover.tex
+++ b/data/cover.tex
@@ -67,7 +67,7 @@
 
 % 定义中英文摘要和关键字
 \begin{cabstract}
-  本文将大型客机减阻问题分解、抽象为三维边界层转捩推迟问题和充分发展槽道减阻问题。针对这两个问题，分别提出了应用介质阻挡放电等离子体激发器的新控制方案。
+  本文将大型客机减阻问题分解、抽象为三维边界层转捩推迟问题和充分发展湍流槽道减阻问题。针对这两个问题，分别提出了应用介质阻挡放电等离子体激发器的新控制方案。
 
   对于三维边界层转捩推迟问题，本文先研究了顺压梯度后掠平板这一模型流动。针对这种流动，本文提出了在每个展向周期放置一个DBD激发器的谐波激励控制方案。为了得到较优的控制参数，本文推导了基于伴随方程的敏感性分析公式。通过分析敏感性因子的分布，发现在横流涡下方偏下扫的位置处添加展向正方向的体积力可以抑制扰动的发展。在这一位置放置等离子体激发器成功抑制了横流涡的增长。本文同时测试了不同的激发器流向位置和激励电压，发现都是适中的情况控制效果较好。
 
