--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -178,7 +178,7 @@
   pages={899},
   year={2013}
 }
-@article{wilke2009aerodynamische,
+@techreport{wilke2009aerodynamische,
   title={Aerodynamische Str{\"o}mungssteuerung mittels dielektrischer Barriereentladungs-Plasmaaktuatoren},
   author={Wilke, J{\"o}rn Bastian},
   year={2009}
@@ -1453,14 +1453,18 @@ type = {Conference Proceedings},
    year = {2010},
    type = {Journal Article}
 }
-@inproceedings{Durscher2011,
+
+@inbook{Durscher2011,
    author = {Durscher, Ryan and Roy, Subrata},
-   title = {Force measurement techniques and preliminary results using aerogels and ferroelectrics for dielectric barrier discharge actuators},
-   booktitle = {42nd AIAA Plasmadynamics and Lasers Conference in conjunction with the 18th International Conference on MHD Energy Conversion (ICMHD)},
-   pages = {3735},
+   title = {Force Measurement Techniques and Preliminary Results Using Aerogels and Ferroelectrics for Dielectric Barrier Discharge Actuators},
+   booktitle = {42nd AIAA Plasmadynamics and Lasers Conference},
+   series = {Fluid Dynamics and Co-located Conferences},
+   publisher = {American Institute of Aeronautics and Astronautics},
    year = {2011},
-   type = {Conference Proceedings}
+   address = {Honolulu, Hawaii, U.S.},
+   type = {Book Section}
 }
+
 @article{Thomas2009,
    author = {Thomas, Flint O and Corke, Thomas C and Iqbal, Muhammad and Kozlov, Alexey and Schatzman, David},
    title = {Optimization of dielectric barrier discharge plasma actuators for active aerodynamic flow control},
@@ -1592,22 +1596,28 @@ type = {Conference Proceedings},
    year = {2011},
    type = {Journal Article}
 }
-@inproceedings{suzen2005,
+@inbook{suzen2005,
    author = {Suzen, Yildirim and Huang, George and Jacob, Jamey and Ashpis, David},
-   title = {Numerical simulations of plasma based flow control applications},
+   title = {Numerical Simulations of Plasma Based Flow Control Applications},
    booktitle = {35th AIAA Fluid Dynamics Conference and Exhibit},
+   series = {Fluid Dynamics and Co-located Conferences},
+   publisher = {American Institute of Aeronautics and Astronautics},
+   address = {Toronto, Ontario, Canada.},
    year = {2005},
-   pages = {4633},
-   type = {Conference Proceedings}
+   type = {Book Section}
 }
-@inproceedings{suzen2007,
+
+@inbook{suzen2007,
    author = {Suzen, Yildirim and Huang, George and Ashpis, David},
-   title = {Numerical simulations of flow separation control in low-pressure turbines using plasma actuators},
+   title = {Numerical Simulations of Flow Separation Control in Low-Pressure Turbines Using Plasma Actuators},
    booktitle = {45th AIAA Aerospace Sciences Meeting and Exhibit},
+   series = {Aerospace Sciences Meetings},
+   publisher = {American Institute of Aeronautics and Astronautics},
+   address = {Reno, Nevada, U.S.},
    year = {2007},
-   pages = {937},
-   type = {Conference Proceedings}
+   type = {Book Section}
 }
+
 @article{enloe2006,
    author = {Enloe, C Lon and McLaughlin, Thomas and Font, Gabriel I and Baughn, James W},
    title = {Parameterization of temporal structure in the single-dielectric-barrier aerodynamic plasma actuator},
@@ -1639,14 +1649,17 @@ type = {Conference Proceedings},
    year = {2014},
    type = {Journal Article}
 }
-@inproceedings{Debiasi2011,
+@inbook{Debiasi2011,
    author = {Debiasi, Marco and Li, Jiun-Ming},
-   title = {Experimental study of a DBD-plasma driven channel flow},
+   title = {Experimental Study of a DBD-Plasma Driven Channel Flow},
    booktitle = {49th AIAA Aerospace Sciences Meeting including the New Horizons Forum and Aerospace Exposition},
-   pages = {954},
+   series = {Aerospace Sciences Meetings},
+   publisher = {American Institute of Aeronautics and Astronautics},
+   address = {Orlando, Florida, U.S.},
    year = {2011},
-   type = {Conference Proceedings}
+   type = {Book Section}
 }
+
 @article{wang2013Recent,
    author = {Wang, Jin-Jun and Choi, Kwing-So and Feng, Li-Hao and Jukes, Timothy N. and Whalley, Richard D.},
    title = {Recent developments in {DBD} plasma flow control},
@@ -2180,7 +2193,7 @@ Philos Trans A Math Phys Eng Sci. 2011 Apr 13;369(1940):1443-58. doi: 10.1098/rs
 @article{wang2018,
    author = {Wang, Zhefu and Wang, Liang and Wang, Qiangyang and Xu,Shengjin and Fu, Song},
    title = {Control of crossflow instability over a swept wing using dielectric-barrier-discharge plasma actuators},
-   journal = {International Journal of Heat and Fluid Flow},
+   journal = {Submitted to International Journal of Heat and Fluid Flow},
    year={2018},
    type = {Journal Article}
 }
