--- a/data/resume.tex
+++ b/data/resume.tex
@@ -8,7 +8,7 @@
 
   2013 年 9 月免试进入清华大学大学航天航空学院攻读力学博士学位至今。
 
-  \researchitem{发表的学术论文} % 发表的和录用的合在一起
+  \researchitem{发表的学术论文\footnote{审稿中文章：Zhefu Wang, Liang Wang, Qingyang Wang, Shengjin Xu and Song Fu. "Control of crossflow instability over a swept wing using dielectric-barrier-discharge plasma actuators", International Journal of Heat and Fluid Flow}} % 发表的和录用的合在一起
 
   % 1. 已经刊载的学术论文（本人是第一作者，或者导师为第一作者本人是第二作者）
   \begin{publications}
