--- a/data/chap03.tex
+++ b/data/chap03.tex
@@ -1,8 +1,10 @@
 \chapter{后掠Hiemenz流动的失稳分析与控制}
-后掠Hiemenz流动与后掠翼上的三维边界层流动非常相似，是非常好的模型流动。本文从这一流动出发，研究三维边界层的横流失稳。原始的二维Hiemenz流动就是一股平面射流，自上而下打到一块平板上，并向平板两边溢流开来。在无粘流的假设下，这与直角的角域流动完全等价。因此，我们可以通过构造幂指数复势解得到无粘的Hiemenz流动的流场分布。这里，将无粘流动壁面上的流速分布作为边界层外缘的速度分布。这一分布的流向速度分量是线性增加的，如式（\ref{e:HiemenzF}）。式中上标`$\dagger$'表示有量纲量，$c$是一个常系数。在二维Hiemenz流动的基础上，引入展向均匀的流动，就是后掠Hiemenz流动，如图（\ref{fig:SweptHiemenz}）所示。有一些研究主要着眼于其附着线的失稳研究\cite{Lin1996,Guegan2006}，本文重点分析研究远离附着线区域的横流转捩问题。研究区域如图（\ref{fig:SweptHiemenz}）中虚线所示。Malik等人\cite{Malik1994}对这一问题的首次失稳和二次失稳做了充分的研究，本文的控制算例也是以他们研究过的工况作为基准算例。本文中采用与文献中\cite{Malik1994}相同的方法求得这一流动的自相似解，并以此作为基本流。
+后掠Hiemenz流动与后掠翼上的三维边界层流动非常相似，是非常好的模型流动。本文从这一流动出发，研究三维边界层的横流失稳。原始的二维Hiemenz流动就是一股平面射流，自上而下打到一块平板上，并向平板两边溢流开来。在无粘流的假设下，这与直角的角域流动完全等价。因此，我们可以通过构造幂指数复势解得到无粘的Hiemenz流动的流场分布。这里，将无粘流动壁面上的流速分布作为边界层外缘的速度分布。这一分布的流向速度分量是线性增加的，如式（\ref{e:HiemenzF}）。
 \begin{equation}\label{e:HiemenzF}
   U^{\dagger}_{\infty}=c^{\dagger}x^{\dagger}
 \end{equation}
+式中上标`$\dagger$'表示有量纲量，$c$是一个常系数。在二维Hiemenz流动的基础上，引入展向均匀的流动，就是后掠Hiemenz流动，如图（\ref{fig:SweptHiemenz}）所示。有一些研究主要着眼于其附着线的失稳研究\cite{Lin1996,Guegan2006}，本文重点分析研究远离附着线区域的横流转捩问题。研究区域如图（\ref{fig:SweptHiemenz}）中虚线所示。Malik等人\cite{Malik1994}对这一问题的首次失稳和二次失稳做了充分的研究，本文的控制算例也是以他们研究过的工况作为基准算例。本文采用与文献中\cite{Malik1994}相同的方法求得这一流动的自相似解，并以此作为基本流。
+
 在后掠Hiemenz流动中，引入的边界层外缘展向速度$W_{\infty}^{\dagger}$在所有流向位置是相同的，因此将这一速度选作参考速度。Malik等人在研究这一问题时，也采用这一速度作为参考速度。$l^\dagger=(\nu^{\dagger}/c^{\dagger})^{\frac{1}{2}}$ 可以用来表征边界层厚度，本文在这个算例中用这个长度作为参考长度。以$W_{\infty}^{\dagger}$作为参考速度定义的雷诺数叫做横流雷诺数，$Re_W=W_{\infty}^{\dagger}l^\dagger/\nu^{\dagger}$，这个雷诺数在Malik等人的文章\cite{Malik1994}中被记做$\bar{R}$。
 \section{后掠Hiemenz流动的稳定性分析}
 \begin{figure}[htb]
@@ -110,12 +112,12 @@
 得到不同的流向位置最大增长率减小值之后，我们对比了流向敏感性，如图\ref{f:senVSstr}。我们可以看到，在进入失稳区之后，相同大小的体积力对横流模态的影响越向下游越小。然而这一结论是建立在线性、单一模态的分析假设下的，并且要求体积力相对于自然扰动模态要非常小。在中性曲线附近，自然扰动非常小，外加体积力无法看成是小量，这一分析也就不再适用。
 \begin{figure}
   \centering
-  \includegraphics[width=0.8\textwidth]{ch3/senVSstr.jpg}
+  \includegraphics[width=0.6\textwidth]{ch3/senVSstr.jpg}
   \caption{敏感性随流向位置变化}\label{f:senVSstr}
 \end{figure}
 
 \subsection{基于PSE的敏感性分析}
-由于基于LST的敏感性分析还是局部性质的结果，并且在推导的时候忽略了二阶项的影响，所以其结果精确度并不高。这一小节主要展示基于PSE的稳定性分析及的结果。依然是针对Case1以及我之前确定的目标模态。这里由于本文希望采用的控制方案还是在线性区进行控制，所以敏感性分析也是只针对线性区进行。因此，这里的原始方程是线性PSE方程，并不包含模态之间的非线性相互作用。图\ref{f:Guvw1}给出了流向速度和敏感因子在$x =280$位置横截面的分布。需要注意的是，在基于LST的敏感性分析中，针对的目标变量是扰动模态的增长率，而在基于PSE的敏感性分析中，针对的目标变量是下游某一位置处的扰动能量（式（\ref{e:PSEoutput_energy}））。图\ref{f:Guvw1}展示的是输出扰动能量选取在$x =500$的结果。其中，用颜色表示的云图是流向的速度分布，线条是各个方向敏感性因子的等值线。这里用实线表示正值，用虚线表示负值。从流向速度分布的云图中，可以看到横流涡正在形成，但是还没有标志着横流涡达到饱和的低速流体翻转现象。低速流体翻转现象也是强非线性产生的标志。从流向速度分布云图中可以看出，这个分析敏感性的位置还处于线性增长区，也符合本文的初衷。虽然横流涡在这里还没有完全形成，但是壁面附近已经有了高低速相间的条带。其他位置的敏感因子分布情况与图\ref{f:Guvw1}展示的类似，这里就不再赘述。值得一提的是，相比于敏感因子的大小，敏感因子的正负是指导控制方案的关键。
+由于基于LST的敏感性分析还是局部性质的结果，并且在推导的时候忽略了二阶项的影响，所以其结果精确度并不高。这一小节主要展示基于PSE的稳定性分析及的结果。依然是针对Case1以及之前确定的目标模态。这里由于本文希望采用的控制方案还是在线性区进行控制，所以敏感性分析也是只针对线性区进行。因此，这里的原始方程是线性PSE方程，并不包含模态之间的非线性相互作用。图\ref{f:Guvw1}给出了流向速度和敏感因子在$x =280$位置横截面的分布。需要注意的是，在基于LST的敏感性分析中，针对的目标变量是扰动模态的增长率，而在基于PSE的敏感性分析中，针对的目标变量是下游某一位置处的扰动能量（式（\ref{e:PSEoutput_energy}））。图\ref{f:Guvw1}展示的是输出扰动能量选取在$x =500$的结果。其中，用颜色表示的云图是流向的速度分布，线条是各个方向敏感性因子的等值线。这里用实线表示正值，用虚线表示负值。从流向速度分布的云图中，可以看到横流涡正在形成，但是还没有标志着横流涡达到饱和的低速流体翻转现象。低速流体翻转现象也是强非线性产生的标志。从流向速度分布云图中可以看出，这个分析敏感性的位置还处于线性增长区，也符合本文的初衷。虽然横流涡在这里还没有完全形成，但是壁面附近已经有了高低速相间的条带。其他位置的敏感因子分布情况与图\ref{f:Guvw1}展示的类似，这里就不再赘述。相比于敏感因子的大小，敏感因子的正负是指导控制方案的关键。
 \begin{figure}[H]
   \centering
   % Requires \usepackage{graphicx}
@@ -206,10 +208,6 @@
 \begin{equation}
 {\rm Energy}_{00}=\frac{1}{4}\int_{0}^{\infty}{(|\hat u|^2+|\hat v|^2+|\hat w|^2)dy}
 \end{equation}
-
-图\ref{f:spanwiselocations}给出了不同算例中等离子体激发器产生的体积力和横流涡的展向位置关系。这里列出的激发器的展向位置分别在$z/T_z = 0.5, 0.6, 0.7, 0.8, 0.9, 1.0$，本文之后简记这些算例为Case（a）-（f）。由于横流涡是斜的，所以在不同的流向位置，横流涡所处的展向位置并不相同。也就是说单说展向坐标并没有实际意义，关注点应该放在体积力和横流涡的相对位置上。图中的颜色云图是体积力的分布，截掉了小于最大值10\%的颜色。图中的线是流向速度的等值线，可以看到横流涡将壁面的低速流动卷起并翻转。等离子体在流向的激励区域用两个蓝色的点表示出来。这里模态还是用 频率-展向波数 来表示。由于本文针对的都是驻涡模态，所以第一个数字都是零。第二个数字表示模态展向波数相对于主模态展向波数的倍数。如之前提到的(0,0)模态即为基本流修正模态，(0,1)是主模态，(0,2)是半波长的次谐波模态。从图\ref{f:spanwiseeffect}中可以看到，主模态的演化规律和之前敏感性分析预测的结果吻合：在Cases(d)和(e)中，主模态能量大幅下降，而这时体积力的位置正好在横流涡的下方，也就是之前敏感性分析得到的$G_w$为负值的区域。在这两个算例中，主模态的能量分别降到了0.0067和0.0077。然而在Cases(a)到(d)中，(0,2)模态被促进了，这和D\"orr与Kloker\cite{dorr2016}在他们的DNS的结果中观察到的相同（他们文章中的Fig.8）。在有些算例中（图\ref{f:d}），(0,2)模态的能量甚至超过了主模态的能量。不过，在Cases(e)和(f)中，并没有出现(0,2)模态被促进这一现象。所以，半波长模态能量的增加并不是所有算例共有的特性，通过调整激发器的展向位置，是可以有效降低所有模态的能量的。在图中所示的算例中，可以看到激发器在$z/Tz=0.9$效果最好。需要提一下的是，D\"orr和Kloker的 DNS\cite{dorr2016}结果中，所有算例里(0,2)模态都被激发了。
-
-
 \begin{figure}[H]
     \centering
     \begin{subfigure}{0.45\textwidth}           %
@@ -289,6 +287,9 @@
     \caption{不同算例中体积力与原横流涡位置关系。颜色云图为体积力分布，曲线为无控制的流向速度等值线}
     \label{f:spanwiselocations} %% label for entire figure
 \end{figure}
+
+图\ref{f:spanwiselocations}给出了不同算例中等离子体激发器产生的体积力和横流涡的展向位置关系。这里列出的激发器的展向位置分别在$z/T_z = 0.5, 0.6, 0.7, 0.8, 0.9, 1.0$，本文之后简记这些算例为Case（a）-（f）。由于横流涡是斜的，所以在不同的流向位置，横流涡所处的展向位置并不相同。也就是说单说展向坐标并没有实际意义，关注点应该放在体积力和横流涡的相对位置上。图中的颜色云图是体积力的分布，截掉了小于最大值10\%的颜色。图中的线是流向速度的等值线，可以看到横流涡将壁面的低速流动卷起并翻转。等离子体在流向的激励区域用两个蓝色的点表示出来。这里模态还是用 频率-展向波数 来表示。由于本文针对的都是驻涡模态，所以第一个数字都是零。第二个数字表示模态展向波数相对于主模态展向波数的倍数。如之前提到的(0,0)模态即为基本流修正模态，(0,1)是主模态，(0,2)是半波长的次谐波模态。从图\ref{f:spanwiseeffect}中可以看到，主模态的演化规律和之前敏感性分析预测的结果吻合：在Cases(d)和(e)中，主模态能量大幅下降，而这时体积力的位置正好在横流涡的下方，也就是之前敏感性分析得到的$G_w$为负值的区域。在这两个算例中，主模态的能量分别降到了0.0067和0.0077。然而在Cases(a)到(d)中，(0,2)模态被促进了，这和D\"orr与Kloker\cite{dorr2016}在他们的DNS的结果中观察到的相同（他们文章中的Fig.8）。在有些算例中（图\ref{f:d}），(0,2)模态的能量甚至超过了主模态的能量。不过，在Cases(e)和(f)中，并没有出现(0,2)模态被促进这一现象。所以，半波长模态能量的增加并不是所有算例共有的特性，通过调整激发器的展向位置，是可以有效降低所有模态的能量的。在图中所示的算例中，可以看到激发器在$z/T_z=0.9$效果最好。需要提一下的是，D\"orr和Kloker的 DNS\cite{dorr2016}结果中，所有算例里(0,2)模态都被激发了。
+
 \begin{figure}[htb]
   \centering
   % Requires \usepackage{graphicx}
@@ -301,17 +302,15 @@
   \includegraphics[width=0.6\linewidth]{ch3/compare160427-vmax.jpg}\\
   \caption{激发器位于不同的流向位置控制效果对比。横轴为据控制起始位置$x_{\rm start}$的距离，纵轴为控制后主模态幅值与无控制主模态幅值之差}\label{f:streamforce2}
 \end{figure}
-
 接下来进行等离子体激发器流向位置效应的研究。需要提及的是，在每一个流向位置，本文都测试了诸多展向控制位置，并且将其中最好的一个算例选取出来进行比较。研究方法依然选用的是NPSE。图\ref{f:streamforce}对比了控制开始于$x_{\rm start}=315, 358, 400$位置处的控制效果。这里每一个控制算例的展流向激励长度，也就是等离子体在流向延伸的长度是相同的。图中曲线均为主模态的能量。这里用到的体积力是之前算例的十分之一，这是因为在上游扰动非常弱，并不需要太强的体积力。体积力过强反而会污染干净的边界层。控制起始于$x_{start}=358$的算例中的主模态能量要远远小于控制起始于$x_{start}=400$算例中的主模态能量，这是因为前者的控制区域更靠近中性点$x=134$，控制的区域边界层内本身有的扰动较弱，所以控制效率较高。读者可以回忆之前敏感性分析的结果，不论是基于LST的敏感性分析还是基于PSE的敏感性分析，都指出在失稳区域，越向上游控制越有效。这两个算例的结果对比符合之前敏感性分析给出的结论。图\ref{f:streamforce2}对比了主模态流向扰动速度在控制区域的变化。这里横坐标是距控制起始位置的距离，也就是$x-x_{\rm start}$。可以看到，在刚刚开始的位置，也就是靠近控制起始点$x_{start}$附近，算例$x_{start}=315$中主模态流向扰动速度下降的最快，也下降的最多。在这一阶段，总的施加于流动上的体积力还不多，所以添加的体积力还很小，满足小扰动假设。因此敏感性分析的结论依然成立，也就是控制越靠上游，效果越好。但是在$x_{start}+18.7$之后，$x_{start}=315$算例的结果与另外两个算例的结果分道扬镳，其主模态开始增长。这就是因为体积力引入的新的扰动已经盖过了原有的扰动，并开始主导失稳过程。需要说明的是，这里曲线出现了很突然的拐折并不是计算的问题，而是因为图中展示的主模态流向扰动速度在横截面上的最大值。当最大值从一个空间位置跳变到另一个空间位置，就会出现导数的不连续的情况。从上面的结果中可以发现，适当的流向控制位置非常关键。
 
-对于Case2，本文也做了无控制的线性稳定性分析，非线性抛物化扰动方程的计算寻找特征模态，并用之前推导出来的敏感性方程做了敏感性分析。但由于结果与Case1的结果非常类似，这里不再展示。唯一需要提及的是这一次主导转捩的模态的展向波数$\beta$变成了0.2。这里重点研究一下不同展向电压的激励，对控制效果的影响。在这个算例中，边界层外的展向速度是前一个算例的两倍，这就意味着此算例需要更强的体积力来控制。在之前算例中过强的激励电压（9kV和10kV）都有可以用来控制转捩了。图\ref{f:voltage}对比了不同激励电压下各阶模态能量的变化。这里依然是选取了最佳的展向控制位置的结果。控制的流向区域从450到500，在图中用两个黑色的大圆点标识出来。绿、蓝、红分别是8、 9、 10kV电压的控制结果。这三个电压在静止的流场中分别可以吹出来最大速度1.7、 2.8、 3.8m/s的射流。之所以选这三个电压是因为在Kriegseis等人\cite{kriegseis2013velocity}的实验中，只测了8、 9、 10、 11、 12kV五个电压的等离子体分布，而最后两个电压太高，会在边界层中引入额外的扰动，所以这里只对比了前三个。从\ref{f:voltage}中可以看到，在控制区域的前半段，也就是$x = 530$之前，三个算例中的扰动能量都受到了抑制，比无控制的结果（图中的黑线）低。但是在10kV的算例中，扰动在控制区域的后半段开始大幅的增长，尤其是(0,0)和(0,2)模态，甚至超过了主模态的能量。前人在用DBD控制横流的DNS结果\cite{dorr2016}中也提到了过强的体积力会产生有害于流动稳定的涡，从而使转捩提前。因此，在这个工况下，中等的电压强度——9kV，是最佳的选择。
-
-\begin{figure}
+\begin{figure}[htb]
   \centering
   % Requires \usepackage{graphicx}
   \includegraphics[width=\linewidth]{ch3/compare754-843(3).eps}\\
   \caption{采用不同电压控制下的各阶模态演化}\label{f:voltage}
 \end{figure}
+对于Case2，本文也做了无控制的线性稳定性分析，非线性抛物化扰动方程的计算寻找特征模态，并用之前推导出来的敏感性方程做了敏感性分析。但由于结果与Case1的结果非常类似，这里不再展示。唯一需要提及的是这一次主导转捩的模态的展向波数$\beta$变成了0.2。这里重点研究一下不同展向电压的激励，对控制效果的影响。在这个算例中，边界层外的展向速度是前一个算例的两倍，这就意味着此算例需要更强的体积力来控制。在之前算例中过强的激励电压（9kV和10kV）都有可以用来控制转捩了。图\ref{f:voltage}对比了不同激励电压下各阶模态能量的变化。这里依然是选取了最佳的展向控制位置的结果。控制的流向区域从450到500，在图中用两个黑色的大圆点标识出来。绿、蓝、红分别是8、 9、 10kV电压的控制结果。这三个电压在静止的流场中分别可以吹出来最大速度1.7、 2.8、 3.8m/s的射流。之所以选这三个电压是因为在Kriegseis等人\cite{kriegseis2013velocity}的实验中，只测了8、 9、 10、 11、 12kV五个电压的等离子体分布，而最后两个电压太高，会在边界层中引入额外的扰动，所以这里只对比了前三个。从\ref{f:voltage}中可以看到，在控制区域的前半段，也就是$x = 530$之前，三个算例中的扰动能量都受到了抑制，比无控制的结果（图中的黑线）低。但是在10kV的算例中，扰动在控制区域的后半段开始大幅的增长，尤其是(0,0)和(0,2)模态，甚至超过了主模态的能量。前人在用DBD控制横流的DNS结果\cite{dorr2016}中也提到了过强的体积力会产生有害于流动稳定的涡，从而使转捩提前。因此，在这个工况下，中等的电压强度——9kV，是最佳的选择。
 
 \section{本章小结}
 在这一章中，本文对后掠Hiemenz流动的失稳过程进行了敏感性分析，并提出了一种采用DBD激发器直接抑制主模态的谐波控制方案。敏感性分析的结果指出，在低速条带下方，也就是横流涡下方偏下扫的位置处添加正方向的体积力可以抑制扰动的发展，后续的NPSE计算也验证了这一结果。之后在等离子体激发器的流向位置效应和电压效应的研究中，发现所添加体积力的强度一定要与当地所存在的扰动强度相当。太弱起不到控制的效果，太强会引入新的扰动主导失稳过程，反而会促进转捩。
