--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -2190,6 +2190,14 @@ Philos Trans A Math Phys Eng Sci. 2011 Apr 13;369(1940):1443-58. doi: 10.1098/rs
 		  publisher = {清华大学},
         keywords = {通量重构方法,湍流模拟,隐式大涡模拟,壁面模型,前台阶流动},
 }
+@phdthesis{Renphd,
+            year = {2015},
+           title = {高超声速边界层{G\"ortler}涡二次失稳和转捩控制研究},
+          school = {清华大学},
+          author = {任杰},
+		  address = {北京},
+		  publisher = {清华大学}
+}
 @article{wang2018,
    author = {Wang, Zhefu and Wang, Liang and Wang, Qiangyang and Xu,Shengjin and Fu, Song},
    title = {Control of crossflow instability over a swept wing using dielectric-barrier-discharge plasma actuators},
